# augmented-reality-tools

./: BGRAVideoFrame.h  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_ob  Marker.cpp  Marker.hpp  MarkerDetector.cpp  MarkerDetector.hpp  README.md  TinyLA.cpp  camera.cpp  cmake_install.cmake  main
resources/: ball.MOV
src/: CameraCalibration.cpp  CameraCalibration.hpp  DebugHelpers.hpp  GeometryTypes.cpp  GeometryTypes.hpp  Marker.cpp  Marker.hpp  MarkerDetector.cpp  MarkerDetector.hpp  camera.cpp  handGesture.cpp
